# aprio-swarm

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.distroless  Dockerfile.glibc  Dockerfile.linux  Dockerfile.minimal  Dockerfile.simple  Dockerfile.standalone  Dockerfile.test  README-Docker.md  README-Minimal.md  README.md  docker-compose.dev.yml  docker-compose.minimal.yml  docker-compose.simple.yml  docker-compose.yml  test-docker.sh  test-nats.sh
crates/swarm-comms/: Cargo.toml
crates/swarm-comms/src/: lib.rs  message_serialization.rs  message_subscription.rs  nats_broker.rs
crates/swarm-core/: Cargo.toml
crates/swarm-core/src/: coordinator.rs  document_reader.rs  document_worker.rs  error.rs  lib.rs  task.rs  traits.rs  types.rs  worker.rs  worker_manager.rs
crates/swarm-core/src/traits/: tests.rs
crates/swarm-documents/: Cargo.toml
crates/swarm-documents/src/: document_processor.rs  document_reader.rs  file_discovery.rs  lib.rs
crates/swarm-worker/: Cargo.toml
crates/swarm-worker/src/: lib.rs
docs/: architecture-diagram.md  diagram-viewer.html  swarm-architecture-purpose.md  worker-architecture-analysis.md  worker-architecture-comparison.md  worker-roles-summary.md
examples/basic-swarm/: Cargo.toml
examples/basic-swarm/src/: main.rs
examples/enhanced-worker-system/: Cargo.toml
examples/enhanced-worker-system/src/: main.rs
examples/nats-demo/: Cargo.toml
examples/nats-demo/src/: main.rs
examples/nats-publisher/: Cargo.toml
examples/nats-publisher/src/: main.rs
examples/nats-subscriber/: Cargo.toml
examples/nats-subscriber/src/: main.rs
examples/simple-document-demo/: Cargo.toml
examples/simple-document-demo/src/: main.rs
examples/simple-test/: Cargo.toml
examples/simple-test/src/: main.rs
scripts/: build-minimal.sh  docker-run.sh  generate_diagrams.py  show_ascii_diagram.py  visualize_performance.py
test-data/: README.md  manual.txt  nonsense_test.docx  notes.txt  project-spec.md  report.txt  sample.txt
