[workspace]
members = [
    "crates/swarm-core",
    "crates/swarm-worker",
    "crates/swarm-scheduler",
    "crates/swarm-comms",
    "crates/swarm-storage",
    "crates/swarm-metrics",
    "workers/document-processor",
    "workers/vector-indexer",
    "workers/real-time-analyzer",
    "workers/ml-inference",
    "examples/basic-swarm"
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
redis = "0.23"
reqwest = { version = "0.11", features = ["json"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
