[package]
name = "swarm-comms"
version = "0.1.0"
edition = "2021"

[dependencies]
swarm-core = { path = "../swarm-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"
async-nats = "0.32"
futures = "0.3"
futures-util = "0.3"
bytes = "1.0"

[dev-dependencies]
tokio-test = "0.4"
