[package]
name = "swarm-documents"
version = "0.1.0"
edition = "2021"

[dependencies]
swarm-core = { path = "../swarm-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
