[package]
name = "swarm-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
swarm-core = { path = "../swarm-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }