[package]
name = "basic-swarm"
version = "0.1.0"
edition = "2021"

[dependencies]
swarm-core = { path = "../../crates/swarm-core" }
swarm-worker = { path = "../../crates/swarm-worker" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
