[package]
name = "nats-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
swarm-core = { path = "../../crates/swarm-core" }
swarm-documents = { path = "../../crates/swarm-documents" }
swarm-comms = { path = "../../crates/swarm-comms" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
