[package]
name = "nats-subscriber"
version = "0.1.0"
edition = "2021"

[dependencies]
swarm-core = { path = "../../crates/swarm-core" }
swarm-comms = { path = "../../crates/swarm-comms" }
swarm-documents = { path = "../../crates/swarm-documents" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
