[package]
name = "simple-document-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
swarm-core = { path = "../../crates/swarm-core" }
swarm-documents = { path = "../../crates/swarm-documents" }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
